added .class fiels into .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Thumbs.db
 coursera/src/main/java/tasks/findMaxTemp/data/2012
 coursera/src/main/java/tasks/findMaxTemp/data/2013
 coursera/src/main/java/tasks/findMaxTemp/data/2014
+/**/**/**/*.class
